Toivottavasti valmis sivu

--- a/pie.css
+++ b/pie.css
@@ -1,6 +1,6 @@
  body {
 
-     background-image: url(Asset%202.png);
+     background-image: url(piirakkataustakuva.png);
      background-position: center;
      background-repeat: repeat;
      background-size: cover;
